Impelementacao TelaSimuladorInvestimento